docs: add hot reload / hot swap docs